aml-system/infra/k3s/base/regulator-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regulator-api
  namespace: aml-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: regulator-api
  template:
    metadata:
      labels:
        app: regulator-api
    spec:
      containers:
        - name: regulator-api
          image: localhost/aml-regulator-api:phase6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: regulator-api
  namespace: aml-system
spec:
  selector:
    app: regulator-api
  ports:
    - name: http
      port: 8085
      targetPort: 8085
